@@ -1,15 +1,8 @@
-language: java
+# use Ubuntu 14.04 (Trusty) image, it contains the latest JDK
+sudo: required
+dist: trusty
 
-before_install:
-  # start X-server for GUI tests (xvfb)
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  # latest Oracle Java release 8u40 is needed => add 3rd party PPA repository (not in Ubuntu repo)
-  - sudo add-apt-repository --yes ppa:webupd8team/java
-  - sudo apt-get update -qq
-  # accept oracle license confirmation dialog without interaction
-  - echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
-  - sudo apt-get install oracle-java8-installer
+language: java
 
 jdk:
   - oraclejdk8
